Found the decryption bug. A little messy, but functional.